# projekt-i-Rafal-Majewski

./: .gitignore  README.md  email_confirmation.py  pyproject.toml
.github/workflows/: testing.yml  tests.yml
modules/: Comment.py  Entry.py  Grade.py  GradeValue.py  Gradebook.py  Person.py  PersonView.py  Student.py  StudentView.py  Subject.py  Teacher.py  TeacherView.py  csvUtils.py  gradeStats.py  utils.py
tests/: Test_Comment.py  Test_Entry.py  Test_Grade.py  Test_GradeValue.py  Test_Gradebook.py  Test_Person.py  Test_PersonView.py  Test_Student.py  Test_Subject.py  Test_Teacher.py  Test_TeacherView.py  Test_calculatePeselChecksum.py  Test_csvUtils.py  Test_gradeStats.py  Test_tests.py  Test_validatePesel.py  ValidPesel.py  test_csvUtils.py
tests/data/: invalid_pesels.txt  valid_pesels.txt
